--- a/style.css
+++ b/style.css
@@ -3,3 +3,7 @@ body {
   h1 {
     color:blanchedalmond; 
     font-size: larger; }
+    p {
+      color:blanchedalmond;
+      font-size:medium;
+    }
