--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   background-color: pink; }
   h1 {
-    color:blanchedalmond; 
+    color:rgb(0, 0, 0); 
     font-size: larger; }
     p {
-      color:blanchedalmond;
+      color:rgb(0, 0, 0);
       font-size:medium;
     }
