color of link styles style.css

--- a/style.css
+++ b/style.css
@@ -15,19 +15,19 @@ a:link {
 }
 
 a:visited {
-  color: pink;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: pink;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:active {
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
