font size style.css

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: pink; }
   h1 {
     color:rgb(0, 0, 0); 
-    font-size: larger; 
+    font-size: 50px; 
     font-family: georgia;
     }
 h3 {
