sour gummy font style.css

--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@ body {
   h1 {
     color:rgb(0, 0, 0); 
     font-size: 50px; 
-    font-family: georgia;
+    font-family: sour gummy;
     }
 h3 {
   color:rgb(0, 0, 0); 
     font-size: normal; 
-    font-family: georgia;
+    font-family: sour gummy;
     p {
       color:rgb(0, 0, 0);
       font-size:medium;
-      font-family: georgia;
+      font-family: sour gummy;
     }
   
 
