--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   background-color: pink; }
   h1 {
     color:rgb(0, 0, 0); 
-    font-size: 50px; 
-    font-family: philsopher;
+    font-size: 30px; 
+    font-family: philosopher;
     }
 h3 {
   color:rgb(0, 0, 0); 
