comic class style.css

--- a/lesson 14/style.css
+++ b/lesson 14/style.css
@@ -13,7 +13,12 @@
 
 
 /* storytelling flowchart image style */
-
+.comics{
+display:flex; 
+  flex-direction: row; 
+  flex-wrap:wrap; 
+  justify-content: space-between; 
+}
 
 
 /* layout style for protagonist image and information*/
