--- a/lesson 14/style.css
+++ b/lesson 14/style.css
@@ -17,7 +17,7 @@
 display:flex; 
   flex-direction: row; 
   flex-wrap:wrap; 
-  justify-content: space-between; 
+  justify-content: space-around; 
 }
 
 
@@ -33,14 +33,21 @@ display:flex;
 
 
 /* supporting cast image style */
-
+.cast {
+  display: flex; 
+  flex-direction:row;
+  justify-content:space-between; 
 
 
 /* layout for planning comic pages images and information */
 
 
 /* layout for image and information within planning container */
-
+.visuals{
+  display: flex; 
+  flex-direction:row;  
+  flex-wrap:wrap; 
+  justify-content:space-around; 
 
 
 /* comic panels image style */
