--- a/lesson 14/style.css
+++ b/lesson 14/style.css
@@ -16,8 +16,8 @@
 .comics{
 display:flex; 
   flex-direction: row; 
-  flex-wrap:wrap; 
-  justify-content: space-between; 
+  flex-wrap:nowrap; 
+  justify-content:flex-start; 
 }
 
 
@@ -36,7 +36,7 @@ display:flex;
 .cast {
   display: flex; 
   flex-direction:row;
-  justify-content:space-between; 
+  justify-content:center; 
 
 
 /* layout for planning comic pages images and information */
