--- a/style.css
+++ b/style.css
@@ -14,28 +14,27 @@ h3 {
       font-size:medium;
       font-family: georgia;
     }
-<style>
+  
 a:link {
   color:rgb(255, 225, 236);
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:visited {
   color:rgb(255, 225, 236);
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:hover {
   color: rgb(255, 242, 246);
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:active {
   color: rgb(255, 255, 255);
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
-</style>
