--- a/lesson 14/style.css
+++ b/lesson 14/style.css
@@ -68,6 +68,12 @@ display:flex;
 
 
 /* style for paragraph in image citation container */
+  .orbitron-<font> {
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <700>;
+  font-style: normal;
+}
 
 
 
