--- a/lesson 14/style.css
+++ b/lesson 14/style.css
@@ -69,7 +69,7 @@ display:flex;
 
 /* style for paragraph in image citation container */
   
-.orbitron-<uniquifier> {
+.orbitron{
   font-family: "Orbitron", serif;
   font-optical-sizing: auto;
   font-weight: 700;
