--- a/style.css
+++ b/style.css
@@ -38,3 +38,28 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+/*Navigation bar*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #fdbfd3;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #f995b4;
+}
+/*Navigation bar end*/
