--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h3 {
       font-family: georgia;
     }
 iframe {
-  <iframe src="demo_iframe.htm" height="1000" width="1000" title="Iframe Example"></iframe>
+  <iframe src="demo_iframe.htm" height="1000" width="1000" title="Ecotree"></iframe>
   }
 a:link {
   color: white ;
